--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,7 @@ h1 {
   text-align: center;
 }
 
+
 .txt{
   padding: 0.5em 1em;
   text-align: justify;
@@ -13,5 +14,6 @@ h1 {
 
 .well {
   float:left;
-  margin: 1em 1em;
+  margin: 1em 3em;
+  padding: 1em 1em;
 }
